fix: fix layout error on ios

--- a/src/index.css
+++ b/src/index.css
@@ -62,13 +62,14 @@
 html,
 body {
    margin: 0;
-   height: 100vh;
+   height: 100%;
+   width: 100%;
    overflow: hidden;
 }
 
 #root {
-   height: 100vh;
-   overflow: hidden;
+   height: 100%;
+   width: 100%;
 }
 
 @theme inline {
@@ -162,7 +163,7 @@ html {
    overscroll-behavior: none;
 }
 
-input[type='number'] {
+input[type='text'] {
    font-size: 16px; /* Prevent iOS zoom on input focus */
 }
 
